--- a/index.html
+++ b/index.html
@@ -12,8 +12,30 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
-      <main class="content"></main>
+      <header class="header">
+        <img src="./images/Logo.svg" alt="Spot Logo" class="header__logo" />
+      </header>
+      <main class="content">
+        <section class="profile">
+          <img
+            src="./images/avatar.jpg"
+            alt="current user's avatar"
+            class="proflie__avatar"
+          />
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+
+            <button class="profile__edit-btn">
+              <img src="" alt="" />
+              <img src="./images/Button Large.png" alt="plus icon" />
+            </button>
+          </div>
+          <button class="profile__add-btn">
+            <img src="./images/Button secondary.png" alt="pencil icon" />
+          </button>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
