--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 alt="Val Thorens"
                 class="card__image"
               />
-              <dvi class="card__content">
+              <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
                 <button type="button" class="card__like-button"></button>
-              </dvi>
+              </div>
             </li>
             <li class="card">
               <img
@@ -54,10 +54,10 @@
                 alt="Restaurant terrace"
                 class="card__image"
               />
-              <dvi class="card__content">
+              <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
                 <button type="button" class="card__like-button"></button>
-              </dvi>
+              </div>
             </li>
             <li class="card">
               <img
@@ -65,10 +65,10 @@
                 alt="An outdoor cafe"
                 class="card__image"
               />
-              <dvi class="card__content">
+              <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
                 <button type="button" class="card__like-button"></button>
-              </dvi>
+              </div>
             </li>
             <li class="card">
               <img
@@ -76,12 +76,12 @@
                 alt="A very long bridge, over the forest..."
                 class="card__image"
               />
-              <dvi class="card__content">
+              <div class="card__content">
                 <h2 class="card__title">
                   A very long bridge, over the forest...
                 </h2>
                 <button type="button" class="card__like-button"></button>
-              </dvi>
+              </div>
             </li>
             <li class="card">
               <img
@@ -89,10 +89,10 @@
                 alt="Tunnel with morning light"
                 class="card__image"
               />
-              <dvi class="card__content">
+              <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
                 <button type="button" class="card__like-button"></button>
-              </dvi>
+              </div>
             </li>
             <li class="card">
               <img
@@ -100,10 +100,10 @@
                 alt="Mountain house"
                 class="card__image"
               />
-              <dvi class="card__content">
+              <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
                 <button type="button" class="card__like-button"></button>
-              </dvi>
+              </div>
             </li>
           </ul>
         </section>
