--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img
             src="./images/avatar.jpg"
             alt="current user's avatar"
-            class="proflie__avatar"
+            class="profile__avatar"
           />
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
