--- a/index.html
+++ b/index.html
@@ -111,6 +111,34 @@
       <footer class="footer">
         <p class="footer__copyright">&copy; 2025 Blake Isget</p>
       </footer>
+      div.modal
+      <modal_is-opened>
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn">x</button>
+          <h2 class="modal__title">Edit profile</h2>
+          <form class="modal__form">
+            <label for="profile-name-input" class="modal__label"
+              >Name
+              <input
+                id="profile-name-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your name"
+              />
+            </label>
+            <label for="profile-description-input" class="modal__label"
+              >Description
+              <input
+                id="profile-description-input"
+                type="text"
+                class="modal__input"
+                placeholder="Describe yourself"
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </modal_is-opened>
     </div>
   </body>
 </html>
