--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
       <footer class="footer">
         <p class="footer__copyright">&copy; 2025 Blake Isget</p>
       </footer>
-      div.modal
-      <modal_is-opened>
+      <div class="modal modal_is-opened">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">x</button>
           <h2 class="modal__title">Edit profile</h2>
@@ -138,7 +137,34 @@
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
-      </modal_is-opened>
+      </div>
+      <div class="modal modal_is-opened">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn">x</button>
+          <h2 class="modal__title">New Post</h2>
+          <form class="modal__form">
+            <label for="card-image-input" class="modal__label"
+              >Image link
+              <input
+                id="card-image-input"
+                type="url"
+                class="modal__input"
+                placeholder="place a link to the picture"
+              />
+            </label>
+            <label for="profile-caption-input" class="modal__label"
+              >Caption
+              <input
+                id="profile-caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
