--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <footer class="footer">
         <p class="footer__copyright">&copy; 2025 Blake Isget</p>
       </footer>
-      <div class="modal modal_is-closed">
+      <div class="modal" id="profile-edit-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">x</button>
           <h2 class="modal__title">Edit profile</h2>
@@ -138,7 +138,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-closed">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">x</button>
           <h2 class="modal__title">New Post</h2>
@@ -166,5 +166,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
