--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </footer>
       <div class="modal" id="profile-edit-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">x</button>
+          <button type="button" class="modal__close-btn">X</button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label"
