--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
         </div>
       </div>
     </div>
+
+<div class="modal modal_type_preview" id="preview-modal">
+        <div class="modal__image-container">
+          <button type="button" class="modal__close-btn modal_type_preview modal__close-btn_type_preview"></button>
+          <img src="#" alt="" class="modal__image">
+          <p class="modal__caption"></p>
+        </div>
+      </div>
+    </div>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
